# persian-number-to-words

./: README.md  licence  pyproject.toml
persian_number_to_words/: __init__.py  cli.py  constants.py  converter.py  models.py  utils.py
tests/: test_basic.py
