[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "persian-number-to-words"
version = "1.0.0"
description = "تبدیل اعداد به حروف فارسی و انگلیسی به صورت حرفه‌ای و مالی"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Pouria", email = "your-email@example.com" }
]
keywords = ["persian", "number", "words", "fa", "english", "financial"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/your-username/persian-number-to-words"
Repository = "https://github.com/your-username/persian-number-to-words"
Documentation = "https://github.com/your-username/persian-number-to-words#readme"

[tool.setuptools.packages.find]
where = ["."]
